--- a/composer.json
+++ b/composer.json
@@ -4,5 +4,11 @@
         "silex/silex": "~1.0",
         "twig/twig": ">=1.8,<2.0-dev",
         "pomm/pomm-service-provider":    "dev-master"
+    },
+    "autoload": {
+        "psr-0": {
+            "StoneApple\\": "src/",
+            "StoneAppleDev\\": "src/StoneApple/Model"
+        }
     }
 }
