--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,9 @@
 */logs/*
 */cache/*
 /web/assets/*
+bin
 
-
+# ignore config files
 resources/config/dev.php
 resources/config/prod.php
 resources/config/test.php
