--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
         "components/bootstrap":         "*"
     },
     "require-dev": {
-        "behat/behat": "2.4.*@stable"
+        "behat/behat": "2.4.*@stable",
+        "behat/mink": "1.4@stable",
+        "behat/mink-goutte-driver": "*"
     },
     "config": {
         "bin-dir": "bin/",
