--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require-dev": {
         "behat/behat": "2.4.*@stable",
         "behat/mink": "1.4@stable",
+        "behat/mink-extension": "*",
         "behat/mink-goutte-driver": "*"
     },
     "config": {
