upgrade behat & mink version to void bug w/ Guzzle when redirecting

--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
         "symfony/translation":          "~2.3"
     },
     "require-dev": {
-        "behat/behat": "2.4.*@stable",
-        "behat/mink": "1.4@stable",
+        "behat/behat": "2.5.*@stable",
+        "behat/mink": "1.5.*@stable",
         "behat/mink-extension": "*",
         "behat/mink-goutte-driver": "*"
     },
